# client-api-lib

./: LICENSE  LICENSE-APACHE-TWO  LICENSE.md  README.md  README.txt
.github/workflows/: build_release_and_debug.yml  on_push_pr.yml
tcp-client/: Cargo.toml
tcp-client/src/: .env  config.rs  main.rs  path.rs
tcp-client/src/api/: auth.rs  mod.rs  sensor.rs  session.rs  session_sensor.rs  session_sensor_data.rs  user.rs
tcp-client/src/requests/: send_request.rs
tcp-server/: Cargo.toml
tcp-server/src/: main.rs
tcp-server/views/: 404.html  index.html
