[package]
name = "tcp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
mockito = "1.6.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
